--- a/data/points.toml
+++ b/data/points.toml
@@ -1,6 +1,6 @@
 [points]
 стартовуюточку = { x = 0.0, y = 0.0, theta = 0.0 }
-точкаодин = { x = 1.0, y = 0.0, theta = 30.0 }
-точкадва = { x = 1.0, y = 1.0, theta = 10.0 }
-точкатри = { x = 0.0, y = 0.5, theta = 0.0 }
+зал = { x = 1.0, y = -1.0, theta = 30.0 }
+кабинет = { x = 1.0, y = 1.0, theta = 60.0 }
+кухню = { x = -0.5, y = 0.5, theta = -45.0 }
 
