--- a/data/speech.toml
+++ b/data/speech.toml
@@ -1,5 +1,5 @@
 [reminders]
-выключитьровер = "Кожанные мешки. Не забудьте выключить роовер. Перед уходом"
+выключитьробота = "Кожанные мешки. Не забудьте выключить робота. Перед уходом"
 проверитьбатарею = "Убедитесь, что батарея заряжена"
 закрытьдверь = "Не забудьте закрыть дверь"
 анекдот = "Робот пошёл на свидание вслепую, но завис на этапе загрузки чувств."
